[package]
name = "wikidigest-link-count"
version = "0.1.1"
authors = ["adrian5 <adrian5@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
ahash = "0.3"
anyhow = "1.0"
clap = "2.3"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
num_cpus = "1.0"
rayon = "1.3"
regex = "1"
